force-app/main/default/objects/Rpl_Eligibility__c/Rpl_Eligibility__c.object-meta.xml
<CustomObject>
    <label>Eligibility</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>Eligibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>