force-app/main/default/objects/Rpl_Eligibility__c/fields/EligibilitySubCourse__c.field-meta.xml
<CustomField>
    <fullName>EligibilitySubCourse__c</fullName>
    <label>Eligibility Sub Course</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>