force-app/main/default/objects/Rpl_Eligibility__c/fields/Eligiblitiy_Criteria_Details__c.field-meta.xml
<CustomField>
    <fullName>Eligiblitiy_Criteria_Details__c</fullName>
    <description>Describes Eligibility Criteria Details of 10th Std, 12nd Std etc</description>
    <label>Eligiblitiy Criteria Details</label>
    <type>TextArea</type>
</CustomField>