force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_10th_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rpl_10th_Percentage__c</fullName>
    <label>10th Percentage(Deprecated))</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Criteria</fullName>
            </value>
            <value>
                <fullName>&gt;=50</fullName>
                <label>50 and Above</label>
            </value>
            <value>
                <fullName>&gt;=60</fullName>
                <label>60 and above</label>
            </value>
            <value>
                <fullName>&gt;=70</fullName>
                <label>70 and above</label>
            </value>
            <value>
                <fullName>&gt;=80</fullName>
                <label>80 and above</label>
            </value>
            <value>
                <fullName>&gt;=90</fullName>
                <label>90 and above</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>