force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_12th_CGPA_Operator__c.field-meta.xml
<CustomField>
    <fullName>Rpl_12th_CGPA_Operator__c</fullName>
    <label>12th CGPA Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Eligibility_Criteria_Operator</valueSetName>
    </valueSet>
</CustomField>