force-app/main/default/objects/Rpl_Eligibility__c/fields/RPL_Acedemic_Name_del__c.field-meta.xml
<CustomField>
    <fullName>RPL_Acedemic_Name_del__c</fullName>
    <label>RPL_Acedemic Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10TH Percentage</fullName>
            </value>
            <value>
                <fullName>12TH Percentage</fullName>
            </value>
            <value>
                <fullName>UG Percentage</fullName>
            </value>
            <value>
                <fullName>PG Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>