force-app/main/default/objects/Rpl_Eligibility__c/fields/RPL_Acedemic_Percentage_del__c.field-meta.xml
<CustomField>
    <fullName>RPL_Acedemic_Percentage_del__c</fullName>
    <label>RPL_Acedemic_Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>85</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>