force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Attendance__c</fullName>
    <label>Attendance</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>