force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Criteria_Storage__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Criteria_Storage__c</fullName>
    <label>Rpl Criteria Storage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>