force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Current_Backlogs__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Current_Backlogs__c</fullName>
    <label>Current Backlogs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>