force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Diploma_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Diploma_Aggregate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Diploma Aggregate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>