force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Dynamic_Query__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Dynamic_Query__c</fullName>
    <label>Dynamic Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>