force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Fee_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Fee_Payment_Status__c</fullName>
    <label>Fee Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include All Students</fullName>
            </value>
            <value>
                <fullName>Exclude Students With Payment Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>