force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Gap_Years__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Gap_Years__c</fullName>
    <label>Gap Years</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>