force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Offer_Count__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Offer_Count__c</fullName>
    <label>Offer Count(Deprecated)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>