force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_PG_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Rpl_PG_CGPA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PG CGPA</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>