force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_PG_Percentage1__c.field-meta.xml
<CustomField>
    <fullName>Rpl_PG_Percentage1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PG Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>