force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Placement_Drive__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Placement_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Drive</label>
    <referenceTo>Rpl_Placement_Drive__c</referenceTo>
    <relationshipLabel>Eligibilities</relationshipLabel>
    <relationshipName>Eligibilities</relationshipName>
    <type>Lookup</type>
</CustomField>