force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Placement_Interest__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Placement_Interest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Placement Interest</label>
    <type>Checkbox</type>
</CustomField>