force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Specialization__c</fullName>
    <label>Specialization</label>
    <type>TextArea</type>
</CustomField>