force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Twelveth_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Twelveth_CGPA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>12th CGPA</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>