force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Twelveth_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Twelveth_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>12th Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>