force-app/main/default/objects/Rpl_Eligibility__c/fields/Rpl_Verification_Status_Of_Student__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Verification_Status_Of_Student__c</fullName>
    <label>Verification Status Of Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Include All Students</fullName>
                <default>true</default>
                <label>Include All Students</label>
            </value>
            <value>
                <fullName>Include Verified Students Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>