force-app/main/default/objects/Rpl_Eligibility__c/fields/RPL_Year_Gap__c.field-meta.xml
<CustomField>
    <fullName>RPL_Year_Gap__c</fullName>
    <label>Year Gap</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>