force-app/main/default/objects/Rpl_Eligibility__c/fields/RPLEligibilityCourse__c.field-meta.xml
<CustomField>
    <fullName>RPLEligibilityCourse__c</fullName>
    <description>To Store the Operator value</description>
    <label>RPL Eligibility Course</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M Tech</fullName>
                <color>#FF6600</color>
                <label>M Tech</label>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>MCOM</fullName>
            </value>
            <value>
                <fullName>BCOM</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>