force-app/main/default/objects/Rpl_Eligibility__c/fields/SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query__c</fullName>
    <label>SOQL Query</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>