force-app/main/default/objects/Rpl_Eligibility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rpl_Placement_Drive__c</columns>
    <columns>Rpl_Placement_Interest__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>